<resources>
    <string name="app_name">MindBodyEarth</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_journal">Current Journal</string>
    <string name="write_thoughts">Write your thoughts here...</string>
    <string name="past_journals">Past Journals</string>
    <string name="journalTitle">\nToday\'s Journal Entry</string>
    <string name="MedArticle1">https://www.medicalnewstoday.com/articles/154543</string>
    <string name="waste_generated_kg">Waste Generated (kg)</string>
    <string name="electricity_usage_kwh">Electricity Usage (kWh)</string>
    <string name="gas_usage_kwh">Gas Usage (kWh)</string>
    <string name="calculate">Calculate</string>
    <string name="energy_consumption">Energy Consumption</string>
    <string name="mode_of_transport">Mode of Transport</string>
    <string name="distance_travelled_km">Distance Travelled (km</string>
    <string name="fuel_efficiency">Fuel Efficiency (%)</string>
    <string name="calculate_carbon_footprint">Calculate Carbon Footprint</string>
    <string name="transport_footprint">Transport Footprint</string>
    <string name="energy_footprint_0_kg_co">Energy Footprint: 0 kg CO₂</string>
    <string name="meal_footprint_0_kg_co">Meal Footprint: 0 kg CO₂</string>
    <string name="carbon_footprint">Carbon Footprint</string>
    <string name="total_footprint_0_kg_co">Total Footprint: 0 kg CO₂</string>
    <string name="transport_footprint_0_kg_co">Transport Footprint: 0 kg CO₂</string>
    <string name="waste_footprint_0_kg_co">Waste Footprint: 0 kg CO₂</string>
    <string name="recycling_rate">Recycling Rate (%)</string>
    <string name="waste_footprint">Waste Footprint</string>
    <string name="your_footprint_result">Your Footprint Result</string>
    <string name="prompt_username">prompt_username</string>
    <string name="save_journal_entry">Save Journal Entry\n</string>
    <string name="today_s_journal_entry">Today\'s Journal Entry\n</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="journal_icon">Journal Icon</string>
    <string name="journal">Journal</string>
    <string name="meal_plan_icon">Meal plan icon</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="workout_icon">Workout icon</string>
    <string name="workout_plan">Workout Plan</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="meditation_icon">meditation icon</string>
    <string name="meditation_guides">Meditation Guides</string>
    <string name="carbon_footprint_icon">carbon_footprint_icon</string>
    <string name="carbon_footprint_tracker">Carbon Footprint Tracker</string>
    <string name="energy_consumption_icon">energy_consumption_icon</string>
    <string name="workout_plan_icon">workout plan icon</string>
</resources>